--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,4 +8,5 @@ jobs:
       with:
         node-version: "18"
         cache: "npm"
+    - run: npm --audit=false --ignore-scripts=true --update-notifier=false --fund=false ci
     - run: node --test
