--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,4 +13,6 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-node-
     - run: "npm run ci"
+    - run: "npm run standard"
+    - run: "npm run tsc"
     - run: "npm test"
