--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "@vlop/index",
   "main": "src/index.mjs",
   "scripts": {
-    "ci": "npm --audit=false --ignore-scripts=true --update-notifier=false --fund=false ci",
+    "ci": "npm --audit=false --ignore-scripts=true --update-notifier=false --fund=false --loglevel=error ci",
     "standard": "standard",
     "tsc": "tsc",
+    "jsdoc": "jsdoc --debug -c jsdoc.json src/index.mjs",
     "test": "node --test"
   },
   "workspaces": [
     "."
   ],
   "devDependencies": {
+    "jsdoc": "4.0.4",
     "standard": "17.1.2",
     "typescript": "5.7.3"
   }
