--- a/.github/workflows/standard.yml
+++ b/.github/workflows/standard.yml
@@ -13,4 +13,4 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-node-
     - run: "npm run ci"
-    - run: "npm test"
+    - run: "npm run standard"
