--- a/.github/workflows/npm-run-script.yml
+++ b/.github/workflows/npm-run-script.yml
@@ -4,15 +4,18 @@ on:
       command:
         required: true
         type: string
-steps:
-  - id: npm-config
-    run: "echo \"cache=$(npm config get cache)\" >> ${GITHUB_OUTPUT}"
-  - uses: "actions/checkout@v4.2.2"
-  - uses: "actions/cache@v4.2.0"
-    with:
-      path: ${{ steps.npm-config.outputs.cache }}
-      key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-      restore-keys: |
-        ${{ runner.os }}-node-
-  - run: "npm run ci"
-  - run: [ "npm", "run", "${{  inputs.command }}" ]
+jobs:
+  npm-run-script:
+    runs-on: ubuntu-latest
+    steps:
+      - id: npm-config
+        run: "echo \"cache=$(npm config get cache)\" >> ${GITHUB_OUTPUT}"
+      - uses: "actions/checkout@v4.2.2"
+      - uses: "actions/cache@v4.2.0"
+        with:
+          path: ${{ steps.npm-config.outputs.cache }}
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+      - run: "npm run ci"
+      - run: [ "npm", "run", "${{  inputs.command }}" ]
