--- a/projects/vlop-docs/package.json
+++ b/projects/vlop-docs/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@vlop/docs",
+  "name": "@souenzzo/vlop-docs",
   "scripts": {
     "ci": "npm --audit=false --ignore-scripts=true --update-notifier=false --fund=false --loglevel=error ci",
-    "start": "jsdoc -c jsdoc.json node_modules/@vlop/core/src/index.mjs"
+    "start": "jsdoc -c jsdoc.json node_modules/@souenzzo/vlop/src/index.mjs"
   },
   "workspaces": [
     "../.."
