--- a/.github/workflows/npm-run-script.yml
+++ b/.github/workflows/npm-run-script.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: "actions/cache@v4.2.0"
         with:
           path: ${{ steps.npm-config.outputs.cache }}
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
       - run: "npm run ci"
