--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -16,9 +16,8 @@ jobs:
         working-directory: projects/vlop-docs
       - run: "npm run docs"
         working-directory: projects/vlop-docs
-      - uses: actions/upload-artifact@v4.6.0
+      - uses: actions/upload-pages-artifact@v3.0.1
         with:
-          name: github-pages
           path: projects/vlop-docs/out
   deploy:
     needs: build
